cmake_minimum_required(VERSION 3.14.0 FATAL_ERROR)
project(Dyninst-External-Tests)

find_package(Dyninst 12.3.0 REQUIRED)

enable_testing()

add_subdirectory(common)
add_subdirectory(dataflowAPI)
add_subdirectory(dwarf)
add_subdirectory(dynC_API)
add_subdirectory(dyninstAPI)
add_subdirectory(elf)
add_subdirectory(generic)
add_subdirectory(instructionAPI)
add_subdirectory(parseAPI)
add_subdirectory(patchAPI)
add_subdirectory(proccontrol)
add_subdirectory(stackwalk)
add_subdirectory(symtab)
